# todo

./: Dockerfile  pyproject.toml
backend/: README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: ba3d4818a4c3_autogeneration.py  e9d6ff603ca1_first_migration.py
backend/src/: main.py
backend/src/db/: db.py
backend/src/models/: models.py
frontend/: README.md  package-lock.json  package.json
frontend/src/app/: page.tsx
models/: item.py
